force-app/main/default/objects/vlocity_ps__VlocityState__c/fields/vlocity_ps__DTPStateModelName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DTPStateModelName__c</fullName>
    <description>Workaround to support import/export of Vlocity Actions that are associated with state model.</description>
    <label>DTP State Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>