force-app/main/default/objects/vlocity_ps__VlocityState__c/fields/vlocity_ps__NoDelete__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__NoDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Delete</label>
    <type>Checkbox</type>
</CustomField>