force-app/main/default/objects/vlocity_ps__VlocityState__c/fields/vlocity_ps__StateRecordType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__StateRecordType__c</fullName>
    <label>State Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>